tweaks for mobile

--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -16,10 +16,12 @@
 
       <br>
       <p class="lead">Happy new Year - now featuring Picolo!</p>
-      <p class="lead">
-      <a href="players" class="btn btn-lg btn-primary">Play Picolo</a>
-      <a href="custom_prompt" class="btn btn-lg btn-secondary">Add Custom Prompts</a>
-      </p>
+      <div class="lead">
+        <div class = "btn-group lead">
+          <a href="players" class="btn btn-lg btn-primary">Play Picolo</a>
+          <a href="custom_prompt" class="btn btn-lg btn-secondary">Add Custom Prompts</a>
+        </div>
+      </div>
     </main>
 
     <footer class="mastfoot mt-auto">
