visual updates for mobile and bug fixes

--- a/flaskr/templates/picolo/game_over.html
+++ b/flaskr/templates/picolo/game_over.html
@@ -12,14 +12,16 @@
     </header>
 
     <main role="main" class="inner cover">
-      <h1 class="cover-heading">Game over - Thanks for playing!</h1>
+      <h1 class="cover-heading">Game Over</h1>
 
       <br>
-
-      <a href="play" class="btn btn-lg btn-primary">Play Again!</a>
-      <a href="/" class="btn btn-lg btn-secondary">Back to main menu & player select</a>
-
-
+      <p class="lead">Thanks for playing!</p>
+      <div class="lead">
+        <div class = "btn-group lead">
+          <a href="play" class="btn btn-lg btn-primary">Play Again</a>
+          <a href="/" class="btn btn-lg btn-secondary">Back to Main Menu</a>
+        </div>
+      </div>
     </main>
 
     <footer class="mastfoot mt-auto">
