--- a/flaskr/static/style-bootstrap-index.css
+++ b/flaskr/static/style-bootstrap-index.css
@@ -78,7 +78,7 @@ body {
 
 @media (min-width: 48em) {
   .masthead-brand {
-    
+
   }
   .nav-masthead {
     float: right;
@@ -103,4 +103,8 @@ body {
  */
 .mastfoot {
   color: rgba(255, 255, 255, .5);
+}
+
+.form-control {
+  text-align: center;
 }
