Started work on hotseat

--- a/flaskr/templates/hotseat/hotseat.html
+++ b/flaskr/templates/hotseat/hotseat.html
@@ -8,19 +8,18 @@
 <body class="text-center">
   <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
     <header class="masthead mb-auto">
-
+      <h2> Hotseat </h2>
+        <a href= "{{ url_for('index') }}" class="btn btn-sm btn-dark">Go back to the main menu</a>
     </header>
 
     <main role="main" class="inner cover">
-      <h1 class="cover-heading">Nasko's Games with Friends</h1>
+      <h1 class="cover-heading">Welcome to Hotseat!</h1>
 
       <br>
-      <p class="lead">Happy new Year - now featuring Picolo!</p>
+
       <div class="lead">
         <div class = "btn-group lead">
-          <a href="players" class="btn btn-lg btn-primary">Play Picolo</a>
-          <a href="play_hotseat" class="btn btn-lg btn-primary">Play Hotseat</a>
-          <a href="custom_prompt" class="btn btn-lg btn-secondary">Add Custom Prompts</a>
+          <a href="play" class="btn btn-lg btn-primary">Play Hotseat</a>
         </div>
       </div>
     </main>
