--- a/flaskr/templates/hotseat/hotseat.html
+++ b/flaskr/templates/hotseat/hotseat.html
@@ -20,6 +20,7 @@
       <div class="lead">
         <div class = "btn-group lead">
           <a href="play" class="btn btn-lg btn-primary">Play Hotseat</a>
+          <button class="btn btn-lg btn-primary" onclick="sound_check()">Test Sound</button>
         </div>
       </div>
     </main>
