--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -14,6 +14,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <script src="{{ url_for('static', filename='scripts/ajax.js') }}"></script>
+    <script src="{{ url_for('static', filename='scripts/hotseat.js') }}"></script>
     {% block scripts %}
 
     {% endblock %}
