--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -19,7 +19,7 @@
       <div class="lead">
         <div class = "btn-group lead">
           <a href="players" class="btn btn-lg btn-primary">Play Picolo</a>
-          <a href="play_hotseat" class="btn btn-lg btn-primary">Play Hotseat</a>
+          <a href="play_hotseat" class="btn btn-lg btn-primary">Play Catch phrase</a>
           <a href="custom_prompt" class="btn btn-lg btn-secondary">Add Custom Prompts</a>
         </div>
       </div>
