--- a/flaskr/templates/hotseat/hotseat.html
+++ b/flaskr/templates/hotseat/hotseat.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %}
 
+{% block scripts %}
+<script src="{{ url_for('static', filename='scripts/hotseat.js') }}">
+</script>
+{% endblock %}
+
 {% block header %}
 
 {% endblock %}
@@ -13,14 +18,19 @@
     </header>
 
     <main role="main" class="inner cover">
-      <h1 class="cover-heading">Welcome to Hotseat!</h1>
+      <h1 class="cover-heading" id ='hotseat_prompt'>Welcome to Catch phrase!</h1>
+      <div class="spinner" id='loading_spinner' style ="display:none;"></div>
 
       <br>
 
-      <div class="lead">
+      <div class="lead" id ='start_button'>
         <div class = "btn-group lead">
-          <a href="play" class="btn btn-lg btn-primary">Play Hotseat</a>
-          <button class="btn btn-lg btn-primary" onclick="sound_check()">Test Sound</button>
+          <button class="btn btn-lg btn-primary" onclick="start_hotseat()">Start</button>
+        </div>
+      </div>
+      <div class="lead" id ='next_button' style ="display:none;">
+        <div class = "btn-group lead">
+          <button class="btn btn-lg btn-secondary" onclick="next_prompt()">Next</button>
         </div>
       </div>
     </main>
