--- a/flaskr/templates/picolo/add_players.html
+++ b/flaskr/templates/picolo/add_players.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 
 {% block scripts %}
+<script src="{{ url_for('static', filename='scripts/ajax.js') }}">
+</script>
 <script>
   window.onload = check_for_players()
 </script>
