Catch phrase feature complete

--- a/flaskr/templates/hotseat/add_prompts.html
+++ b/flaskr/templates/hotseat/add_prompts.html
@@ -37,15 +37,14 @@
             </div>
 
           <div class="form-group col-lg-2">
-            <label for="inputState">Type of question</label>
+            <label for="inputState">Type of prompt</label>
             <select id="category" name="category" class="form-control" required>
               <option value='' selected disabled hidden>Choose...</option>
-              <option value='question'>General prompt</option>
-              <option value='choose_one'>Direct single person prompt</option>
-              <option value='choose_two'>Choose between 2 people</option>
-              <option value='categories'>Categories</option>
-              <option value='would_you_rather'>Would you Rather?</option>
-              <option value='filler'>Non-drinking prompts</option>
+              <option value='general'>General prompt</option>
+              <option value='funny'>Funny</option>
+              <option value='weird'>Weird</option>
+              <option value='rather_forget'>History would rather forget</option>
+              <option value='party'>Party Stories</option>
             </select>
           </div>
           <button type="submit" class="btn btn-primary">Submit</button>
