--- a/flaskr/templates/hotseat/hotseat.html
+++ b/flaskr/templates/hotseat/hotseat.html
@@ -13,13 +13,13 @@
 <body class="text-center">
   <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
     <header class="masthead mb-auto">
-      <h2> Hotseat </h2>
+      <h2> Catch Phrase </h2>
         <a href= "{{ url_for('index') }}" class="btn btn-sm btn-dark">Go back to the main menu</a>
+        <div class="spinner" id='loading_spinner' style ="display:none;"></div>
     </header>
 
     <main role="main" class="inner cover">
       <h1 class="cover-heading" id ='hotseat_prompt'>Welcome to Catch phrase!</h1>
-      <div class="spinner" id='loading_spinner' style ="display:none;"></div>
 
       <br>
 
