--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -15,12 +15,17 @@
       <h1 class="cover-heading">Nasko's Games with Friends</h1>
 
       <br>
-      <p class="lead">Happy new Year - now featuring Picolo!</p>
+      <p class="lead">Happy new Year! Now featuring Picolo and Catch Phrase!</p>
+      <div class="lead">
+        <div class = "btn-group lead" style ='border-color: black;'>
+          <a href="players" class="btn btn-lg btn-primary">Play Picolo</a>
+          <a href="play_hotseat" class="btn btn-lg btn-primary">Play Catch Phrase</a>
+        </div>
+      </div>
+      <br>
       <div class="lead">
         <div class = "btn-group lead">
-          <a href="players" class="btn btn-lg btn-primary">Play Picolo</a>
-          <a href="play_hotseat" class="btn btn-lg btn-primary">Play Catch phrase</a>
-          <a href="custom_prompt" class="btn btn-lg btn-secondary">Add Custom Prompts</a>
+          <a href="custom_prompts" class="btn btn-lg btn-secondary">Add Custom Prompts</a>
         </div>
       </div>
     </main>
