--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -13,6 +13,7 @@
     <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     {% block scripts %}
 
     {% endblock %}
