--- a/flaskr/templates/custom_prompts.html
+++ b/flaskr/templates/custom_prompts.html
@@ -8,20 +8,19 @@
 <body class="text-center">
   <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
     <header class="masthead mb-auto">
-      <h2> Picolo </h2>
+      <h2> Add custom </h2>
       <a href= "{{ url_for('index') }}" class="btn btn-sm btn-dark">Go back to the main menu</a>
     </header>
 
     <main role="main" class="inner cover">
-      <h1 class="cover-heading">{{ payload['summary'] }}</h1>
-
+      <h1 class="cover-heading">Which game would you like to add to?</h1>
       <br>
-      <h6>From the twisted mind of {{ payload['author']}}</h6>
-
-      <br>
-      <a href="play" class="btn btn-lg btn-secondary">Next</a>
-
-
+      <div class="lead">
+        <div class = "btn-group lead">
+          <a href="custom_prompt_picolo" class="btn btn-lg btn-secondary">Picolo</a>
+          <a href="custom_prompt_hotseat" class="btn btn-lg btn-secondary">Catch Phrase</a>
+        </div>
+      </div>
     </main>
 
     <footer class="mastfoot mt-auto">
