bug fix on selecting prompts

--- a/flaskr/templates/hotseat/add_prompts.html
+++ b/flaskr/templates/hotseat/add_prompts.html
@@ -12,7 +12,7 @@
 <body class="text-center">
   <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
     <header class="masthead mb-auto">
-      <h2> Picolo </h2>
+      <h2> Catch phrase </h2>
       <a href= "{{ url_for('index') }}" class="btn btn-sm btn-dark">Go back to the main menu</a>
     </header>
 
